--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-pie-chart": "^2.1.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-side-drawer": "^2.1.0",
     "react-native-super-grid": "^5.0.0",
     "react-native-svg": "^13.6.0",
     "react-native-vector-icons": "^9.2.0",
