--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.71.5",
     "react-native-blob-util": "^0.17.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^4.2.9",
     "react-native-document-picker": "^8.1.3",
     "react-native-image-picker": "^4.10.3",
